fixed spacing bottom and added service

--- a/src/app/groups/group-memberlist/group-memberlist.component.css
+++ b/src/app/groups/group-memberlist/group-memberlist.component.css
@@ -1,7 +1,7 @@
 .container {
   margin-top: 20px;
   margin-bottom: 15px;
-  height: calc(100% - 95px);
+  height: calc(100% - 95px - 35px);
 }
 
 .card {
